--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     background-color: #0f1111;
     color: white;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
 }
